--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^7.2.1",
     "faker": "^5.5.3",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.1",
     "pg": "^8.16.0",
     "socket.io": "^4.8.1"
   },
